test/fail/integration/_fail_sem_decl_value_3.hs
x :: Int
x = 3
x = 4
main = print "hello"